manifests/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/realtime-satellite-api/api
          name: api
          ports:
            - containerPort: 5566
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 10002
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "2"
            limits:
              memory: "2Gi"
              cpu: "8"
          livenessProbe:
            httpGet:
              path: /livez
              port: 10002
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 10002
            initialDelaySeconds: 5
            periodSeconds: 20
      restartPolicy: Always
