manifests/base/nginx-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: nginx-cache
  name: nginx-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-cache
  template:
    metadata:
      labels:
        io.kompose.service: nginx-cache
    spec:
      containers:
        - image: nginx-cache
          name: nginx-cache
          ports:
            - containerPort: 80
              hostPort: 9080
              protocol: TCP
            - containerPort: 81
              hostPort: 9081
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
