manifests/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "5566"
      port: 5566
      targetPort: 5566
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: api
