manifests/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: satellite-api.react-flight-tracker.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  api
                port:
                  number: 8080
  tls:
    - hosts:
        - satellite-api.react-flight-tracker.apoorva64.com
      secretName: satellite-react-flight-tracker-tls
